<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_wallet"
    android:id="@+id/createWallet">

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="Create a wallet"
        android:textColor="@color/teal_700"
        android:textSize="60sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHello"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:text="Create an ethereum wallet for use with this app.
                       Enter a password to use the wallet, don't forget it!"
        android:textColor="@color/teal_700"
        android:textSize="17sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editDeclareEthAddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDesc"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="82dp"
        android:hint="Password"
        android:minHeight="48dp"
        android:textColor="@color/teal_700" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveAddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editDeclareEthAddr"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="82dp"
        android:layout_marginTop="20dp"
        android:background="#0C90B8"
        android:onClick="onSavePassword"
        android:text="Save" />

</RelativeLayout>
