<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:text="Welcome"
        android:textColor="@color/teal_700"
        android:textSize="90sp"
        android:textStyle="bold|italic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startItemUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHello"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="#0C90B8"
        android:onClick="startItemUpload"
        android:text="List new item">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startItemlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startItemUpload"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#0C90B8"
        android:onClick="newActivity"
        android:text="Inventory">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/receiveItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startItemlist"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#0C90B8"
        android:onClick="startItemReceive"
        android:text="Receive">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveAddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/receiveItem"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="82dp"
        android:layout_marginTop="20dp"
        android:background="#0C90B8"
        android:onClick="onClick"
        android:text="Account info" />


</RelativeLayout>