<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".receiveItem"
    android:id="@+id/receiveItem">

    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp" />

</RelativeLayout>