<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".item_upload"
    android:id="@+id/uploadActivity">

    <TextView
        android:id="@+id/txtUploadheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:text="@string/list_item"
        android:textColor="@color/teal_700"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editDeclareEthAddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUploadheading"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="82dp"
        android:hint="@string/item_name"
        android:minHeight="48dp"
        android:textColor="@color/teal_700" />

    <EditText
        android:id="@+id/editUploadTxtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editDeclareEthAddr"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="82dp"
        android:hint="@string/item_description"
        android:minHeight="48dp"
        android:textColor="@color/teal_700" />

    <EditText
        android:id="@+id/dateToReturnBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editUploadTxtDesc"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="82dp"
        android:hint="@string/return_date"
        android:minHeight="48dp"
        android:textColor="@color/teal_700" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateToReturnBy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#0C90B8"
        android:onClick="onUploadClick"
        android:text="@string/mint_item" />

</RelativeLayout>