<resources>
    <string name="app_name">NFTAppV2</string>
    <string name="mint_item">Mint item</string>
    <string name="item_description">Item description</string>
    <string name="item_name">Item name</string>
    <string name="upload_item">Upload item</string>
    <string name="return_date">Return date</string>
    <string name="list_tem">List tem</string>
    <string name="list_item">List item</string>
    <string name="title_activity_account_info">accountInfo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>